argocd/dev/result/result-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-route-result
  namespace: votingapp
spec:
  parentRefs:
    - name: conquer-gw
      namespace: istio-system
  hostnames:
    - result.conquerproject.io
  rules:
    - matches:
        - path:
            value: /
      backendRefs:
        - name: result
          port: 80
